packages/docs/global.css
* {
  box-sizing: border-box;
}

html,
body,
body > * {
  margin: 0;
  font-family: RocknRoll One;
  scroll-behavior: smooth;
}

body {
  color: rgba(0, 0, 0, 0.8);
}

body[data-theme='dark'] {
  color: #9aa0a6 !important;
}

pre,
code {
  white-space: pre-wrap !important;
}

ol,ul,li { margin: 0; padding-inline: 10px; }

:root {
  --prismjs-background: #ffffff;
  --prismjs-selection: #073642;
  --prismjs-base-color: #657b83;
  --prismjs-comment: #93a1a1;
  --prismjs-punctuation: #586e75;
  --prismjs-property: #268bd2;
  --prismjs-string: #2aa198;
  --prismjs-function: #b58900;
  --prismjs-keyword: #859900;
  --prismjs-variable: #cb4b16;
}

body[data-theme='dark'] {
  --prismjs-background: #282a36;
  --prismjs-selection: #44475a;
  --prismjs-base-color: #f8f8f2;
  --prismjs-comment: #6272a4;
  --prismjs-punctuation: #ff79c6;
  --prismjs-property: #bd93f9;
  --prismjs-string: #f1fa8c;
  --prismjs-function: #50fa7b;
  --prismjs-keyword: #ff79c6;
  --prismjs-variable: #6272a4;
}

code[class*='language-'],
pre[class*='language-'] {
  color: var(--prismjs-base-color);
  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  font-size: 1em;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

pre[class*='language-']::-moz-selection,
pre[class*='language-'] ::-moz-selection,
code[class*='language-']::-moz-selection,
code[class*='language-'] ::-moz-selection {
  background: var(--prismjs-selection);
}

pre[class*='language-']::selection,
pre[class*='language-'] ::selection,
code[class*='language-']::selection,
code[class*='language-'] ::selection {
  background: var(--prismjs-selection);
}

pre[class*='language-'] {
  padding: 1em;
  overflow: auto;
}

:not(pre) > code[class*='language-'],
pre[class*='language-'] {
  background-color: var(--prismjs-background);
}

:not(pre) > code[class*='language-'] {
  padding: 0.1em;
  border-radius: 0.3em;
}

.token.cdata,
.token.comment,
.token.doctype,
.token.prolog {
  color: var(--prismjs-comment);
}

.token.punctuation {
  color: var(--prismjs-punctuation);
}

.token.namespace {
  opacity: 0.7;
}

.token.boolean,
.token.constant,
.token.deleted,
.token.number,
.token.property,
.token.symbol,
.token.tag {
  color: var(--prismjs-property);
}

.token.attr-name,
.token.builtin,
.token.char,
.token.inserted,
.token.selector,
.token.string,
.token.url {
  color: var(--prismjs-string);
}

.token.entity {
  color: #657b83;
  background: #eee8d5;
}

.token.atrule,
.token.attr-value,
.token.keyword {
  color: var(--prismjs-keyword);
}

.token.class-name,
.token.function {
  color: var(--prismjs-function);
}

.token.important,
.token.regex,
.token.variable {
  color: var(--prismjs-variable);
}

.token.bold,
.token.important {
  font-weight: bold;
}

.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

